WYSIWYG Text Toolbar bug fixed on Firefox

--- a/public/vishEditor/stylesheets/browser/firefox.css
+++ b/public/vishEditor/stylesheets/browser/firefox.css
@@ -6,10 +6,6 @@ div#viewerpreview {
 	padding-left: 26px !important;
 }
 
-#toolbar_element {
-	position: absolute;
-}
-
 /* Button fonts */
 .button {
 	font-weight: bold;
